fix: remove redundant justify-content and align-items properties from header

--- a/CSS/QuizWebpage/styles.css
+++ b/CSS/QuizWebpage/styles.css
@@ -9,6 +9,9 @@ header {
   height: 50px;
   background-color: #1b1b32;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
 #logo {
   width: max(10rem, 18vw);
